body overflow fixed

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -14,6 +14,7 @@ html {
 body {
     line-height: 1.5; 
     font-family: Montserrat; 
+    box-sizing: border-box;
 }
 
 input {
